# rkol

./: README.md  rkol.pl
game/: KoLParse.hs  kolLogin.hs
old/: djmaps.txt
old/IRC/: Bot.hs  Conc.hs  Fetch.hs  chatbot.hs  djmaps.hs  djmaps.txt
old/game/: KoLChat.hs  ParseLib.hs  kolConf
tchakkabot/: LICENSE  rkol.fmt  tchakkabot.cabal  tchatbot.cabal
tchakkabot/src/: Config.hs  Formatter.hs  IRCBot.hs  KoLJSON.txt  Main.hs  Paths_tchatbot.hs.2  Poll.hs  Util.hs  tchatbotv2.hs
tchakkabot/src/IRCBot/: Whois.hs
tchakkabot/src/Shoutcast/: Fetch.hs  Fetch1.hs  Fetch2.hs  Formatter.hs  ServerStats.hs
